<resources>
    <string name="app_name">nom</string>
    <string name="username">username</string>
    <string name="password">password</string>
    <string name="login">Login</string>
    <string name="sign_up">Sign Up</string>
    <string name="home">home</string>
    <string name="compose">Compose</string>
    <string name="profile">Profile</string>
    <string name="image_preview_of_picture_about_to_be_posted">image preview of picture about to be posted</string>
    <string name="take_picture">Take Picture</string>
    <string name="add_a_description">Add a description…</string>
    <string name="homemade">Homemade</string>
    <string name="restaurant">Restaurant</string>
    <string name="next">Next</string>
    <string name="enter_location">Enter location</string>
    <string name="enter_recipe_link">Enter recipe link</string>
    <string name="enter_price">Enter price</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="user_s_profile_picture">user\'s profile picture</string>
    <string name="descriptionSampleText">This is a meal I had in Canada when I went to visit my friends.</string>
    <string name="recipe_icon">recipe icon</string>
    <string name="price_icon">price icon</string>
    <string name="location_icon">location icon</string>
    <string name="like_icon">like icon</string>
    <string name="post_image">post image</string>
    <string name="post">Post</string>
    <string name="tempLikes">15 Likes</string>
    <string name="are_you_sure_you_want_to_logout">Are you sure you want to logout?</string>
    <string name="yes_logout">Yes, Logout</string>
    <string name="no_stay_signed_in">No, Stay Signed In</string>
</resources>