<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/action_home"
        android:icon="@drawable/ic_baseline_home_outline_24"
        android:title="@string/home"
        app:showAsAction="always"
        tools:ignore="AlwaysShowAction" />
    <item
        android:id="@+id/action_compose"
        android:icon="@drawable/ic_baseline_add_circle_24"
        android:title="@string/compose"
        app:showAsAction="always" />
    <item
        android:id="@+id/action_profile"
        android:icon="@drawable/ic_baseline_person_24"
        android:title="@string/profile"
        app:showAsAction="always" />
</menu>