<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/imageViewProfilePicture"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginStart="5dp"
        android:layout_marginTop="5dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:srcCompat="@tools:sample/avatars"
        android:contentDescription="@string/user_s_profile_picture" />
    <TextView
        android:id="@+id/textViewUsername"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginTop="5dp"
        android:textSize="18sp"
        app:layout_constraintStart_toEndOf="@+id/imageViewProfilePicture"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="mervyn" />
    <ImageView
        android:id="@+id/imageViewPostImage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:scaleType="fitXY"
        android:adjustViewBounds="true"
        android:layout_marginTop="5dp"
        app:layout_constraintTop_toBottomOf="@+id/imageViewProfilePicture"
        tools:layout_editor_absoluteX="82dp"
        tools:srcCompat="@tools:sample/avatars"
        android:contentDescription="@string/post_image" />
    <ImageView
        android:id="@+id/imageViewLike"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginStart="5dp"
        android:layout_marginTop="5dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageViewPostImage"
        app:srcCompat="@drawable/ic_baseline_favorite_border_24"
        android:contentDescription="@string/like_icon" />
    <ImageView
        android:id="@+id/imageViewLocation"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginStart="5dp"
        android:layout_marginTop="5dp"
        app:layout_constraintStart_toEndOf="@+id/imageViewLike"
        app:layout_constraintTop_toBottomOf="@+id/imageViewPostImage"
        app:srcCompat="@drawable/ic_baseline_location_on_24"
        android:contentDescription="@string/location_icon" />
    <ImageView
        android:id="@+id/imageViewPrice"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginStart="5dp"
        android:layout_marginTop="5dp"
        app:layout_constraintStart_toEndOf="@+id/imageViewLocation"
        app:layout_constraintTop_toBottomOf="@+id/imageViewPostImage"
        app:srcCompat="@drawable/ic_baseline_attach_money_24"
        android:contentDescription="@string/price_icon" />
    <ImageView
        android:id="@+id/imageViewRecipe"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginStart="5dp"
        android:layout_marginTop="5dp"
        app:layout_constraintStart_toEndOf="@+id/imageViewPrice"
        app:layout_constraintTop_toBottomOf="@+id/imageViewPostImage"
        app:srcCompat="@drawable/ic_baseline_link_24"
        android:contentDescription="@string/recipe_icon" />
    <TextView
        android:id="@+id/textViewLikeAmount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageViewLike"
        tools:text="19 Likes" />
    <TextView
        android:id="@+id/textViewUsername2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginTop="5dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewLikeAmount"
        tools:text="mervyn" />
    <TextView
        android:id="@+id/textViewDescription"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginTop="5dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewUsername2"
        tools:text="@string/descriptionSampleText" />
    <TextView
        android:id="@+id/textViewCreatedAt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginTop="5dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewDescription"
        tools:text="5 days ago" />
</androidx.constraintlayout.widget.ConstraintLayout>