<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <ImageView
        android:id="@+id/imageViewProfilePicture"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginStart="5dp"
        android:layout_marginTop="5dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:srcCompat="@tools:sample/avatars"
        android:contentDescription="@string/user_s_profile_picture" />
    <TextView
        android:id="@+id/textViewUsername"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:paddingEnd="20dp"
        android:textColor="#000000"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/imageViewProfilePicture"
        app:layout_constraintStart_toEndOf="@+id/imageViewProfilePicture"
        app:layout_constraintTop_toTopOf="@+id/imageViewProfilePicture"
        tools:ignore="RtlSymmetry"
        tools:text="mervyn" />

    <ImageView
        android:id="@+id/imageViewPostImage"
        android:layout_width="250dp"
        android:layout_height="250dp"
        android:layout_marginTop="5dp"
        android:adjustViewBounds="true"
        android:contentDescription="@string/post_image"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageViewProfilePicture"
        tools:srcCompat="@tools:sample/avatars" />
    <TextView
        android:id="@+id/textViewDescription"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:layout_marginStart="10dp"
        android:paddingEnd="20dp"
        android:textColor="#000000"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageViewPostImage"
        tools:text="@string/descriptionSampleText"
        tools:ignore="RtlSymmetry" />
</androidx.constraintlayout.widget.ConstraintLayout>